static/css/style.css
/* GENERAL STYLES - SITE CONSISTENCY */
html, body {
    height: 100%;
    margin: 0;
    overflow-y: auto;
}

body {
    font-family: 'Orbitron', Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #000;
    color: white;
}

button {
    font-family: inherit;
}

/* PHAEDRUS BGROUND ON MULTIPLE BASIC PAGES */
.phaedrus-bg {
    background-image: url('/static/images/phaedrus-full.png');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    height: 100vh;
    padding: 40px;
}

/* SPACING ON 9 PAGES LATE IN F.END DEV*/

.spacing-top { 
    margin-top: 80px;
    margin-left: 30px;
}


/* NAVIGATION BAR UNIVERSAL */
header nav {
    background-color: rgba(0, 0, 0, 0.7);
    padding: 10px 20px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header nav ul:last-child {
    margin-right: 40px;
}

header nav ul {
    display: flex;
    justify-content: center;
    list-style: none;
    padding: 0;
    margin: 0;
}

header nav ul li {
    margin: 0 20px;
}

header nav ul li a {
    color: white;
    text-decoration: none;
    font-weight: bold;
    font-size: 18px;
}

header nav ul li a:hover {
    color: #FFD700;
    text-decoration: underline;
}

.burger {
    display: none;
    font-size: 2rem;
    color: white;
    cursor: pointer;
    margin-right: 20px;
}

/* DROPDOWN CONTAINER STYLING */
.dropdown {
    position: relative;
    display: inline-block;
}

/* STYLE FOR USERNAME OR TRIGGER */
.dropbtn {
    color: white;
    font-weight: bold;
    text-decoration: none;
    display: inline-block;
}

/* DROPDOWN MENU (HIDDEN BY DEFAULT) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #333;
    min-width: 160px;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
    z-index: 1000;
}

/* DROPDOWN MENU ITEMS */
.dropdown-content a {
    color: white;
    padding: 10px 16px;
    text-decoration: none;
    display: block;
}

/* HOVER EFFECT FOR DROPDOWN ITEMS */
.dropdown-content a:hover {
    background-color: #575757;
}

.dropdown:hover .dropdown-content {
    display: block; /* SHOWS DROPDOWN ON HOVER */
}

.dropdown:hover .dropbtn {
    text-decoration: underline;
}

/* HOME PAGE STYLING */
#landing {
    /*display: flex; - consider */
    justify-content: space-between;
    align-items: center;
    height: 100vh;
    background-color: #111;
    background-image: url('/static/images/shack-bground.png');
    background-size: cover;
    background-position: center;
    padding: 20px;
}

.landing-text {
    z-index: 10;
}

.landing-text h1 {
    font-size: 4em;
    color: #FFD700;
    margin-top:100px; 
}

.landing-text p {
    font-size: 1.5em;
    margin-top: 350px;
}

/* ALL BUTTONS UNIVERSAL */
.buttons .btn {
    font-family: 'Orbitron', Arial, sans-serif;
    padding: 15px 30px;
    margin-top: 20px;
    background-color: #FFD700;
    color: black;
    font-size: 1.2em;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s;
}

.buttons .btn:hover {
    background-color: #FF8C00;
}

/* FOOTER UNIVERSAL STYLE */
footer {
    text-align: center;
    background-color: #111;
    position: fixed;
    width: 100%;
    bottom: 0;
}

/* ABOUT PAGE STYLING */

.about-page {
    margin: 0;
    padding: 0;
}

.about-container {
    display: flex;
    height: 100vh; 
    align-items: center; 
}

.about-container .text {
    flex: 1;
    padding: 20px;
    color: #fff;
}

.about-container .image {
    flex: 1;
    background-image: url('/static/images/matter-lake.png');
    background-size: cover;
    background-position: left center;
    height: 100%; 
}

.about-container h1 {
    font-size: 32px;
    margin-bottom: 50px;
    margin-top: 50px; 
}

.about-container p {
    font-size: 13px;
    line-height: 1.6;
}

/* REVIEWS LIST PAGE STYLING */

.review-page {
    background-image: url('/static/images/reviews-pic.png');
    background-size: cover;
    background-position: center;
}

.review-list-page {
    padding-left: 5%; 
}

.review-list {
    position: relative;
    width: 100%;
    max-width: 600px;
    height: 200px;
}

.review-item {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    opacity: 0;
    transition: opacity 0.9s ease-in-out;
    pointer-events: none;;
}

.review-item.active {
    opacity: 1;
    pointer-events: auto;
    z-index: 1;
}

.review-stars .star {
    font-size: 1.2rem;
    color: #666;
}

.review-stars .star.filled {
    color: gold;
}

body.review-dark {
  background-color: #031430;
  color: #fff;
}

.review-list-page h1 {
    padding-top: 100px;
    color: #FFD700;
}

.review-list-page .btn {
    display: inline-block;
    padding: 10px 20px;
    background-color: #007bff;
    color: white;
    text-decoration: none;
    font-size: 16px;
    border-radius: 5px;
}

 .review-list-page .btn:hover {
    background-color: #FF8C00;
    color: #FFD700;
} 

.review-list-page .review-list {
    margin-top: 40px;
}

.review-list-page .review-item {
    background-color: #282928;
    padding: 15px;
    margin-bottom: 15px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.review-list-page .review-item h2 {
    margin-bottom: 10px;
}

.review-list-page .review-item p {
    font-size: 14px;
    line-height: 1.5;
    color: white;
}

.review-list-page hr {
    margin-top: 20px;
    border: 0.5px solid #ddd;
}

/* INDIVIDUAL REVIEWS PAGE WITH HEART */

.review-header {
    margin-top: 60px;
    border-bottom: 1px solid #444;
    margin-bottom: 1rem;
}

.review-meta {
    display: flex;
    gap: 1rem;
    font-size: 0.9rem;
    color: #aaa;
    flex-wrap: wrap;
    align-items: center;
}

.review-rating {
    color: gold;
    font-size: 1.2rem;
}

.like-block {
    display: flex;
    align-items: center;
    gap: 5px;
}

.like-button {
    all: unset;
    font-size: 1.8rem;
    cursor: pointer;
    color: #ccc;
    transition: color 0.3s ease;
    display: inline-block;
    line-height: 1;
}

.like-button:hover {
    color: red;
}

.liked {
    color: red;
}

.like-count {
    font-size: 1.2rem;
}

.review-body {
    margin: 1rem 0;
    font-size: 1.1rem;
    line-height: 1.5;
}

.edit-delete-buttons {
    margin-top: 10px;
}

.edit-delete-buttons .btn.small {
    font-size: 0.8rem;
    padding: 0.3rem 0.6rem;
}

.comment-section {
    border-top: 1px solid #f3f4f7;
    margin-top: 2rem;
    padding-top: 1rem;
}

.comments-list {
    margin-top: 1rem;
}

.comment {
    background-color: #031430;
    padding: 10px;
    margin-bottom: 1rem;
    border-radius: 6px;
}

.comment-date {
    font-size: 0.8rem;
    color: #777;
}

.no-comments {
    font-style: italic;
    color: #888;
}

/* BOOKING FORM PAGE STYLING */

.booking-page {
    background-image: url('/static/images/shack-inside.png');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    height: 100vh;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 500px;
    margin: 20px auto;
    margin-top: 200px;
    background-color: #000000; 
    padding: 30px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

.container h1 {
    text-align: center;
    color: #ffffff;
    margin-bottom: 20px;
}

form p {
    font-size: 16px;
    margin-bottom: 10px;
}

button.btn {
    font-family: 'Orbitron', Arial, sans-serif;
    display: block;
    padding: 15px;
    background-color: #ffffff;
    border: none;
    border-radius: 5px;
    font-size: 18px;
    cursor: pointer;
}

button.btn:hover {
    background-color: #0056b3;
}

.messages .error {
  color: red; /* FOR NON-SIGNED IN BOOKING ATTEMPTS */
  margin-top: 10px;
  font-weight: bold;
}

/* SIGN UP FORM */

.form-row {
  margin-bottom: 1.2rem;
  display: flex;
  flex-direction: column;
  width: 50%;
}

.form-row label {
  font-weight: bold;
  margin-bottom: 0.2rem;
}

.helptext {
  font-size: 0.9rem;
  color: #888;
  margin-top: 0.4rem;
}


/* MEDIA QUERIES */

/* Show burger icon and hide nav links under 1024px */
@media (max-width: 1023px) {
    .burger {
        display: block;
        font-size: 2rem;
        color: white;
        cursor: pointer;
        margin-right: 40px;
        margin-left: auto;
    }

    header nav {
        flex-direction: row;
    }

    header nav ul {
        display: none;
        flex-direction: column;
        background-color: rgba(0, 0, 0, 0.95);
        position: absolute;
        top: 60px;
        right: 20px;
        padding: 1rem;
        border-radius: 5px;
        width: 200px;
    }

    header nav ul.active {
        display: flex;
    }

    header nav ul li {
        margin: 10px 0;
        text-align: right;
    }

    .landing-text {
        font-size: 10px;
    }

    .landing-text p {
        margin-top: 0;
    }

    .getaway-msg {
        margin-top: 400px;
    }

    /* About page on smaller screens */
    
    .about-container {
        flex-direction: column;
        height: 100vh;  
    }

    .about-container .image {
        flex: unset; 
        width: 100%;
        min-height: 350px; 
        height: 250px; 
        background-position: center;
    }

    .about-container .text h1 {
        margin-top: 40px;
        font-size: 18px;
    }

    .about-container .text h2 {
        font-size: 14px;
    }

    .about-container .text p {
        font-size: 10px;
    }

    footer {
        padding: 0px;
    }

    .review-list-page h1 {
        padding-top: 75px;
    }

    .spacing-top {
        margin-left: 0px;
        margin-top: 30px;
    }
}

@media (min-width: 1024px) {
    .about-container {
        display: block;
        height: 100vh;
        align-items: center;
    }

    /*Booking container*/
    .container {
        margin-top: 100px;
    }

    .review-list-page h1 {
    padding-top: 50px;
    color: #FFD700;
    }

    .review-list {
    z-index: 0;
    padding-bottom: 100px;
    width: 100%; 
    max-width: 900px;
    }
}

@media (max-width: 424px) {
    .getaway-msg {
        margin-top: 300px;
    }
}

/* HELP TEXT STYLING ON SIGNUP ON SMALL SCREENS */
@media (max-width: 767px) {
    .helptext {
        font-size: 12px;
    }
}

/* KEEP HOME BUTTONS SMALL - AVOID SQUASH AND OVERLAP */
@media (max-width: 374px) {
  .buttons .btn {
    font-size: 0.75rem;
    padding: 0.4rem 0.6rem;
  }
}

